mv sessions to auths
